# packMarlin

./: .gitignore  .gitmodules  Cargo.toml  copy_packr1cs.sh  example.r1cs  witness.json
src/: index.rs  main.rs  prove.rs  setup.rs  verify.rs
